Shivi | update gradle version in docker file.